--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 <body>
 
 
-<div class="container-fluid" style="background-color: #DCDCDC;">
-  <div class="row">
+<div class="container-fluid" >
+  <div class="row" style="background-color: #DCDCDC;">
   <div class="col-md-2 title1" style="left: 8px">
       <span><h3><mark><b><a href="#" class="link1">Brexit Deal</a></b></mark></h3></span>
     <span><b>Thursday</b></span>
@@ -87,17 +87,38 @@
     <span style="color: red"><b>2018</b></span>
     </span>
   </div>
-<a href="#" style="text-decoration: none">
-      <div class="col-md-7" style="left: 18%;top: -20%">
-      <div class="photo">
-        <img src="img/4.jpg" alt="Usama" style="object-fit: fill;">
+<div class="col-md-7" style="left: -1%;top: -20%">
+    <div class="card" style="width:100%;background-color: #4E4C45">
+    <img class="card-img-top" src="img/4.jpg" alt="Card image" style="max-width:100%">
+    <div class="card-body">
+      <h3 class="card-title" style="color: #FF4E36">John Doe</h3>
+    </div>
+  </div>
+  <br>
+    </div>
+   <div class="col-md-3">
+      <div class="row">
+      <div class="col-md-9">
+        <div class="card" style="width:220px;background-color: #4E4C45">
+    <img class="card-img-top" src="img/8.jpg" alt="Card image" style="max-width:100%">
+    <div class="card-body">
+      <h3 class="card-title" style="color: #FF4E36">John Doe</h3>
+    </div>
+  </div>
+  <br>
+      </div>
+      <div class="col-md-9">
+        <div class="card" style="width:220px;background-color: #4E4C45">
+    <img class="card-img-top" src="img/8.jpg" alt="Card image" style="max-width:100%">
+    <div class="card-body">
+      <h3 class="card-title" style="color: #FF4E36">John Doe</h3>
+    </div>
+  </div>
+  <br>
       </div>
     </div>
-</a>
-
+   </div>
   </div>
-</div>
-<div class="container-fluid">
   <div class="row">
     <div class="col-md-2" style="left: 8px;top: 62%">
       <span><h3><b>Headlines</b></h3></span>
@@ -110,24 +131,373 @@
         <span>18*C</span>
        </span>
     </div>
-    <div class="col-md-2"></div>
-    <div class="col-md-7" style="left: 1.4%;top: 100%">
-      <div class="photo">
-        <img src="img/4.jpg" alt="Usama" style="object-fit: fill;">
+    <div class="col-md-7">
+      <div class="row">
+        <div class="col-md-12">
+          <img src="img/9.jpg" style="width:98%;object-fit: scale-down;">
+        </div>
       </div>
-    </div>
-    <div class="col-md-7" style="left: 18.1%;top: 100%">
-      <div class="photo">
-        <img src="img/4.jpg" alt="Usama" style="object-fit: fill;">
-      </div>
-    </div>
-    <div class="col-md-3">
-      
+      <div class="row">
+        <div class="col-md-8"><div class="card" style="width:510px;background-color: #4E4C45;top: 1%">
+    <img class="card-img-top" src="img/15.jpg" alt="Card image" style="max-width:100%">
+    <div class="card-body">
+      <h4 class="card-title" style="color: #FF4E36">John Doe</h4>
     </div>
   </div>
 </div>
+        <div class="col-md-4">
+          <div class="row">
+            <div class="col-md-12"><div class="card" style="background-color: #4E4C45;top: 1%;right: 1%;width: 220px">
+    <img class="card-img-top" src="img/13.jpg" alt="Card image" style="max-width:100%">
+    <div class="card-body">
+      <h4 class="card-title" style="color: #FF4E36">John Doe</h4>
+    </div>
+  </div>
+</div>
+            <div class="col-md-12"><div class="card" style="width: 220px;right: 1%">
+    <div class="card-body text-center">
+      <p class="card-text">Some text inside the fourth card</p>
+    </div>
+  </div>
+</div>
+            <div class="col-md-12"><div class="card" style="width: 220px;right: 1%">
+    <div class="card-body text-center">
+      <p class="card-text">Some text inside the fourth card</p>
+    </div>
+  </div>
+</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="row">
+        <div class="col-md-9">    
+          <div class="card" style="width:220px;height: 300px;background-color: #4E4C45">
+    <img class="card-img-top" src="img/12.jpg" alt="Card image" style="max-width:100%">
+    <div class="card-body">
+      <h4 class="card-title" style="color: #FF4E36">John Doe</h4>
+    </div>
+  </div>
+</div>
+        <div class="col-md-9">
+          <div class="card">
+    <div class="card-body text-center">
+      <p class="card-text">Some text inside the fourth card</p>
+    </div>
+  </div>
+        </div>
+        <div class="col-md-9"><div class="card" style="width: 220px">
+    <div class="card-body text-center">
+      <p class="card-text">Some text inside the fourth card</p>
+    </div>
+  </div></div>
+        <div class="col-md-9"><div class="card" style="width: 220px">
+    <div class="card-body text-center">
+      <p class="card-text">Some text inside the fourth card</p>
+    </div>
+  </div></div>
+        <div class="col-md-9"><div class="card" style="width: 220px">
+    <div class="card-body text-center">
+      <p class="card-text">Some text inside the fourth card</p>
+    </div>
+  </div></div>
+        <div class="col-md-9"><div class="card" style="width: 220px">
+    <div class="card-body text-center">
+      <p class="card-text">Some text inside the fourth card</p>
+    </div>
+  </div></div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-2 bg-light">Podcast</div>
+    <div class="col-md-7">
+      <div class="card" style="background-color: #4E4C45;max-width: 98%">
+    <img class="card-img-top" src="img/16.jpg" alt="Card image" style="max-width:100%">
+  </div>
+    </div>
+    <div class="col-md-3">
+      <div class="row">
+        <div class="col-md-9">
+          <img class="card-img-top" src="img/8.jpg" alt="Card image" style="max-width:100%;height: 220%">
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-2 bg-success">Spotlight</div>
+    <div class="col-md-4">
+      <div class="row">
+        <div class="col-md-12 bg-warning">asdad</div>
+        <div class="col-md-12 bg-success">asdasd</div>
+        <div class="col-md-12 bg-warning">asdad</div>
+        <div class="col-md-12 bg-success">asdasd</div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="row">
+        <div class="col-md-6 bg-warning">dasda</div>
+        <div class="col-md-6">
+          <div class="row">
+            <div class="col-md-9 bg-success">asdasd</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row" style="background-color: #DCDCDC;">
+    <div class="col-md-2 bg-danger">The Guardian Subscription</div>
+    <div class="col-md-4 bg-warning">asdasd</div>
+    <div class="col-md-6">
+      <div class="row">
+        <div class="col-md-9 bg-success">asdasd</div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-2 bg-light">The One Million Milestone</div>
+    <div class="col-md-7">
+      <div class="row">
+        <div class="col-md-4 bg-danger">asdasd</div>
+        <div class="col-md-4 bg-warning">asdasd</div>
+        <div class="col-md-4 bg-success">asdasd</div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="row">
+        <div class="col-md-9 bg-warning">asdasd</div>
+      </div>
+    </div>
+    </div>
+    <div class="row">
+      <div class="col-md-2 bg-warning">Sport</div>
+      <div class="col-md-4">
+        <div class="row">
+          <div class="col-md-12 bg-success">sadasd</div>
+          <div class="col-md-12 bg-warning">sadasd</div>
+          <div class="col-md-12 bg-danger">sadasd</div>
+          <div class="col-md-12 bg-warning">sadasd</div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="row">
+          <div class="col-md-12 bg-success">asdasd</div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="row">
+          <div class="col-md-9 bg-warning">asdasd</div>
+        </div>
+      </div>
+    </div>
+     <div class="row">
+      <div class="col-md-2 bg-success">Opinion</div>
+      <div class="col-md-4">
+        <div class="row">
+          <div class="col-md-12 bg-danger">sadasd</div>
+          <div class="col-md-12 bg-warning">sadasd</div>
+          <div class="col-md-12 bg-danger">sadasd</div>
+          <div class="col-md-12 bg-warning">sadasd</div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="row">
+          <div class="col-md-12 bg-warning">asdasd</div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="row">
+          <div class="col-md-9 bg-success">asdasd</div>
+        </div>
+      </div>
+    </div>
+     <div class="row">
+      <div class="col-md-2 bg-warning">Around The World</div>
+      <div class="col-md-2 bg-success">asdasd</div>
+      <div class="col-md-2 bg-danger">asdasd</div>
+       <div class="col-md-3">
+        <div class="row">
+          <div class="col-md-12 bg-success">asdasd</div>
+          <div class="col-md-12 bg-warning">asadasd</div>
+          <div class="col-md-12 bg-success">asdasd</div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="row">
+          <div class="col-md-9 bg-success">asdasd</div>
+          <div class="col-md-9 bg-warning">asadasd</div>
+          <div class="col-md-9 bg-success">asdasd</div>
+        </div>
+      </div>
+      </div>
+      <div class="row">
+    <div class="col-md-2 bg-success">Culture</div>
+    <div class="col-md-4">
+      <div class="row">
+        <div class="col-md-12 bg-warning">asdad</div>
+        <div class="col-md-12 bg-success">asdasd</div>
+        <div class="col-md-12 bg-warning">asdad</div>
+        <div class="col-md-12 bg-success">asdasd</div>
+      </div>
+    </div>
+    <div class="col-md-3">
+        <div class="row">
+          <div class="col-md-12 bg-danger">asdasd</div>
+          <div class="col-md-12 bg-warning">asadasd</div>
+          <div class="col-md-12 bg-success">asdasd</div>
+        </div>
+      </div>
+       <div class="col-md-3">
+        <div class="row">
+          <div class="col-md-9 bg-success">asdasd</div>
+          <div class="col-md-9 bg-warning">asadasd</div>
+          <div class="col-md-9 bg-success">asdasd</div>
+        </div>
+      </div>
+  </div>
+  <div class="row">
+    <div class="col-md-2 bg-success">Lifestyle</div>
+    <div class="col-md-4">
+      <div class="row">
+        <div class="col-md-12 bg-success">asdasd</div>
+        <div class="col-md-12 bg-danger">asdasd</div>
+        <div class="col-md-12 bg-warning">asdasd</div>
+      </div>
+    </div>
+    <div class="col-md-3 bg-success">asdasd</div>
+    <div class="col-md-3">
+      <div class="row">
+        <div class="col-md-9 bg-warning">asdasd</div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-2 bg-light">Explore</div>
+    <div class="col-md-4">
+      <div class="row">
+        <div class="col-md-12 bg-success">asdasd</div>
+        <div class="col-md-12">
+          <div class="row">
+            <div class="col-md-6 bg-danger">asdasd</div>
+            <div class="col-md-6 bg-success">asdasd</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="row">
+        <div class="col-md-10 bg-success">asdasd</div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-2 bg-warning">The Defenders</div>
+    <div class="col-md-3 bg-danger">
+      asdasd
+    </div>
+    <div class="col-md-4">
+      <div class="row">
+        <div class="col-md-12 bg-danger">asdasd</div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-2 bg-success">In Pictures</div>
+    <div class="col-md-7">
+      <div class="row">
+        <div class="col-md-12 bg-success">asdadad</div>
+        <div class="col-md-12">
+          <div class="row">
+            <div class="col-md-4 bg-danger">asdasd</div>
+            <div class="col-md-4 bg-warning">asdasd</div>
+            <div class="col-md-4 bg-success">asdasd</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-2 bg-warning">Most Viewed</div>
+    <div class="col-md-6">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="row">
+            <div class="col-md-12 bg-success">asdasd</div>
+            <div class="col-md-12 bg-warning">asdasd</div>
+            <div class="col-md-12 bg-success">asdasd</div>
+            <div class="col-md-12 bg-warning">asdasd</div>
+            <div class="col-md-12 bg-success">asdasd</div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="row">
+            <div class="col-md-12 bg-warning">asdasd</div>
+            <div class="col-md-12 bg-danger">asdasd</div>
+            <div class="col-md-12 bg-warning">asdasd</div>
+            <div class="col-md-12 bg-success">asdasd</div>
+            <div class="col-md-12 bg-danger">asdasd</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+      <div class="col-md-12 bg-light">Topic</div>
+      <div class="col-md-12">Links</div>
+    </div>
+  <div class="row">
+    <div class="col-md-12">
+      <nav class="navbar navbar-expand-sm bg-light">
+
+  <!-- Links -->
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" href="#">World</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">UK</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Science</a>
+    </li>
+        <li class="nav-item">
+      <a class="nav-link" href="#">Cities</a>
+    </li>
+        <li class="nav-item">
+      <a class="nav-link" href="#">Global Development</a>
+    </li>
+        <li class="nav-item">
+      <a class="nav-link" href="#">Tech</a>
+    </li>
+        <li class="nav-item">
+      <a class="nav-link" href="#">Business</a>
+    </li>
+        <li class="nav-item">
+      <a class="nav-link" href="#">Environment</a>
+    </li>
+        <li class="nav-item">
+      <a class="nav-link" href="#">Obituaries</a>
+    </li>
+  </ul>s
+</nav>
+    </div>
+  </div>
+    </div>
 </body>
 <div class="text-center custom-footer" style="background: #0b1f67;color: white">
-  <p>Footer</p>
+  <div class="row">
+    <div class="col-md-5" style="text-align: left;">
+      Signup for our daily email
+    </div>
+    <div class="col-md-4">
+      <div class="row">
+        <div class="col-md-4">asdasd</div>
+        <div class="col-md-4">asdads</div>
+        <div class="col-md-4">asdasd</div>
+      </div>
+    </div>
+    <div class="col-md-3"><h3 style="columns: yellow"><b>Support The Guardian</b></h3></div>
+  </div>
 </div>
 </html>
