--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
 
 </nav>
 </head>
-<body style="border: 1px solid grey">
-<div class="container-fluid">
+<body style="border: 1px solid grey;padding: 0px">
+<div class="container">
   <div class="row" style="background-color: #DCDCDC;">
   <div class="col-md-2" style="left: 8px;top: 15px">
       <span><h3><mark><b><a href="#" class="link1">Brexit Deal</a></b></mark></h3></span>
@@ -127,7 +127,7 @@
    <div class="col-md-3">
       <div class="row">
       <div class="col-md-9">
-        <div class="card" style="width:220px;background-color: #4E4C45;top: 3.5%">
+        <div class="card" style="width:220px;right: 22px;background-color: #4E4C45;top: 3.5%">
     <img class="card-img-top" src="img/8.jpg" alt="Card image" style="max-width:100%">
     <div class="card-body">
       <h3 class="card-title" style="color: #FF4E36">John Doe</h3>
@@ -136,7 +136,7 @@
   <br>
       </div>
       <div class="col-md-9">
-        <div class="card" style="width:220px;background-color: #4E4C45;top: 10.5%">
+        <div class="card" style="width:220px;right: 22px;background-color: #4E4C45;top: 10.5%">
     <img class="card-img-top" src="img/8.jpg" alt="Card image" style="max-width:100%">
     <div class="card-body">
       <h3 class="card-title" style="color: #FF4E36">John Doe</h3>
@@ -146,8 +146,8 @@
     </div>
    </div>
   </div>
-  <div class="row" style="border: 1px solid grey;border-right: 0px">
-    <div class="col-md-2 bg-light" style="left: 8px; margin-top: 20px">
+  <div class="row" style="border: 1px solid grey;">
+    <div class="col-md-2 bg-light" style="left: 9px; margin-top: 20px">
       <span><h3><b>Headlines</b></h3></span>
       <span><h5 class="fas fa-search"> Lahore</h5></span>
       <div><span class="fas fa-cloud-sun-rain" style="left: 10%"><p>Now</p></span>
@@ -158,7 +158,7 @@
         <span>18*C</span>
        </span>
     </div>
-    <div class="col-md-7" style="border: 1px solid grey;border-top: 0px;border-bottom: 0px;margin-bottom: 30px;border-right: 0px">
+    <div class="col-md-7" style="border: 0px solid grey;border-top: 0px;border-bottom: 0px;margin-bottom: 30px;border-right: 0px">
       <div class="row">
         <div class="col-md-12" style="margin-top: 10px">
           <img src="img/9.jpg" style="width:98%;object-fit: scale-down;">
@@ -183,7 +183,7 @@
     </div>
   </div>
 </div>
-        <div class="col-md-4">
+        <div class="col-md-4" style="">
           <div class="row">
             <div class="col-md-12"><div class="card" style="width: 223px;right: 2.7%;top: 20%;border-top: 1px solid red;">
     <div class="card-body text-center">
@@ -211,10 +211,10 @@
        
       </div>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3" style="">
       <div class="row">
         <div class="col-md-9">    
-          <div class="card" style="width:220px;height: 270px;background-color: #4E4C45;margin-top: 10px;border-top: 1px solid red">
+          <div class="card" style="width:220px;right:22px;height: 270px;background-color: #4E4C45;margin-top: 10px;border-top: 1px solid red">
     <img class="card-img-top" src="img/12.jpg" alt="Card image" style="max-width:100%">
     <div class="card-body">
       <h4 class="card-title" style="color: #FF4E36">John Doe</h4>
@@ -222,31 +222,31 @@
   </div>
 </div>
         <div class="col-md-9">
-          <div class="card" style="top: 5px;border-top: 1px solid red">
+          <div class="card" style="right:22px;top: 5px;border-top: 1px solid red">
     <div class="card-body text-center">
       <p class="card-text">Some text inside the fourth card</p>
     </div>
   </div>
         </div>
-        <div class="col-md-9"><div class="card" style="width: 220px;top: 5px;border-top: 1px solid red">
+        <div class="col-md-9"><div class="card" style="right:22px;width: 220px;top: 5px;border-top: 1px solid red">
     <div class="card-body text-center">
       <p class="card-text">Some text inside the fourth card</p>
     </div>
   </div>
 </div>
-        <div class="col-md-9"><div class="card" style="width: 220px;top: 5px;border-top: 1px solid red">
+        <div class="col-md-9"><div class="card" style="right:22px;width: 220px;top: 5px;border-top: 1px solid red">
     <div class="card-body text-center">
       <p class="card-text">Some text inside the fourth card</p>
     </div>
   </div>
 </div>
-        <div class="col-md-9"><div class="card" style="width: 220px;top: 5px;border-top: 1px solid red">
+        <div class="col-md-9"><div class="card" style="right:22px;width: 220px;top: 5px;border-top: 1px solid red">
     <div class="card-body text-center">
       <p class="card-text">Some text inside the fourth card</p>
     </div>
   </div>
 </div>
-        <div class="col-md-9"><div class="card" style="width: 220px;top: 5px;border-top: 1px solid red">
+        <div class="col-md-9"><div class="card" style="right:22px;width: 220px;top: 5px;border-top: 1px solid red">
     <div class="card-body text-center">
       <p class="card-text">Some text inside the fourth card</p>
     </div>
@@ -257,7 +257,7 @@
   </div>
   <div class="row" style="border: 1px solid grey; border-right: 0px;border-top:0px; ">
     <div class="col-md-2 bg-light" style="margin-top: 5px"><h3><b>Podcast</b></h3></div>
-    <div class="col-md-7" style="margin-top: 8px; margin-bottom: 8px;border:1px solid grey;border-top: 0px ;border-right: 0px;border-bottom: 0px">
+    <div class="col-md-7" style="margin-top: 8px; margin-bottom: 8px;border:0px solid grey;border-top: 0px ;border-right: 1px solid grey;border-bottom: 0px;">
       <div class="card" style="background-color: #4E4C45;max-width: 98%;border-top: 1px solid red">
     <img class="card-img-top" src="img/16.jpg" alt="Card image" style="max-width:100%">
   </div>
@@ -314,10 +314,10 @@
     </div>
   </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6" style="border-left: 1px solid grey">
           <div class="row">
             <div class="col-md-9">
-              <div class="card" style="width:220px;background-color:#4E4C45;top: 5%;height: 152%;top: 8%">
+              <div class="card" style="width:220px;background-color:#4E4C45;top: 5%;height: 152%;top: 8%;">
     <img class="card-img-top" src="img/8.jpg" alt="Card image" style="max-width:100%">
     <div class="card-body">
       <h3 class="card-title" style="color: #FF4E36">John Doe</h3>
@@ -725,7 +725,7 @@
     </div>
   </div> -->
   <div class="row">
-    <div class="col-md-2" style="margin-top: 5px;margin-left: 6px; border-right: 1px solid grey;"><h3><b>Most Viewed</b></h3></div>
+    <div class="col-md-2" style="margin-top: 5px;margin-left: 10px; border-right: 1px solid grey;"><h3><b>Most Viewed</b></h3></div>
     <div class="col-md-6">
       <div class="row">
         <div class="col-md-6">
@@ -828,8 +828,7 @@
 </nav>
     </div>
   </div>
-</body>
-<div class="text-center custom-footer" style="background: #0b1f67;color: white;border:1px solid white">
+  <div class="text-center custom-footer" style="background: #0b1f67;color: white;border:1px solid white">
   <div class="row">
     <div class="col-md-4" style="text-align: left;">
       Signup for our daily email
@@ -869,4 +868,5 @@
     </div>
   </div>
 </div>
+</body>
 </html>
