--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 </nav>
 </head>
-<body style="border: 2px solid grey">
+<body style="border: 2px solid grey;margin: 25px">
 <div class="container">
   <div class="row" style="background-color: #DCDCDC;">
   <div class="col-md-2" style="left: 8px;top: 15px">
@@ -146,7 +146,7 @@
     </div>
    </div>
   </div>
-  <div class="row" style="border: 1px solid grey;">
+  <div class="row" style="border: 0px solid grey;">
     <div class="col-md-2 bg-light" style="left: 9px; margin-top: 20px">
       <span><h3><b>Headlines</b></h3></span>
       <span><h5 class="fas fa-search"> Lahore</h5></span>
@@ -221,26 +221,26 @@
     </div>
   </div>
 </div>
-        <div class="col-md-9" style="margin-left: 20px;margin-left: 20px">
-          <div class="card" style="right:22px;top: 5px;border-top: 1px solid red">
+        <div class="col-md-9" style="margin-left: 20px;margin-left: 20px;margin-bottom: 6px">
+          <div class="card" style="right:20px;top: 5px;border-top: 1px solid red">
     <div class="card-body text-center">
       <p class="card-text">Some text inside the fourth card</p>
     </div>
   </div>
         </div>
-        <div class="col-md-9" style="margin-left: 20px"><div class="card" style="right:22px;width : 100%;top: 5px;border-top: 1px solid red">
+        <div class="col-md-9" style="margin-left: 20px"><div class="card" style="right:20px;margin-bottom: 6px;width : 100%;top: 5px;border-top: 1px solid red">
     <div class="card-body text-center">
       <p class="card-text">Some text inside the fourth card</p>
     </div>
   </div>
 </div>
-        <div class="col-md-9" style="margin-left: 20px"><div class="card" style="right:22px;;width : 100%;top: 5px;border-top: 1px solid red">
+        <div class="col-md-9" style="margin-left: 20px"><div class="card" style="right:20px;margin-bottom: 6px;width : 100%;top: 5px;border-top: 1px solid red">
     <div class="card-body text-center">
       <p class="card-text">Some text inside the fourth card</p>
     </div>
   </div>
 </div>
-        <div class="col-md-9" style="margin-left: 20px"><div class="card" style="right:22px;width : 100%;top: 5px;border-top: 1px solid red">
+        <div class="col-md-9" style="margin-left: 20px"><div class="card" style="right:20px;margin-bottom: 6px;width : 100%;top: 5px;border-top: 1px solid red">
     <div class="card-body text-center">
       <p class="card-text">Some text inside the fourth card</p>
     </div>
@@ -255,10 +255,10 @@
       </div> -->
     </div>
   </div>
-  <div class="row" style="border: 1px solid grey; border-right: 0px;border-top:0px; ">
+  <div class="row" style="border: 0px solid grey; border-right: 0px;border-top:0px; ">
     <div class="col-md-2 bg-light" style="margin-top: 5px"><h3><b>Podcast</b></h3></div>
-    <div class="col-md-7" style="margin-top: 8px; margin-bottom: 8px;border:0px solid grey;border-top: 0px ;border-right: 1px solid grey;border-bottom: 0px;">
-      <div class="card" style="background-color: #4E4C45;max-width : 100%border-top: 1px solid red">
+    <div class="col-md-7" style="margin-top: 8px; margin-bottom: 8px;border:0px solid grey;border-top: 0px ;border-right: 0px solid grey;border-bottom: 0px;">
+      <div class="card" style="background-color: #4E4C45;max-width : 100%;height: 100%;border-top: 1px solid red">
     <img class="card-img-top" src="img/16.jpg" alt="Card image" style="max-width : 100%">
   </div>
     </div>
@@ -346,10 +346,10 @@
       </div>
     </div>
   </div> -->
-  <div class="row" style="border:1px solid grey;border-top: 0px;border-right: 0px;">
+  <div class="row" style="border:0px solid grey;border-top: 0px;border-right: 0px;">
     <div class="col-md-2 bg-light" style="margin-top: 4px"><h3><b>The One Million Milestone</b></h3>
       <p>Stories to mark the Guardian reaching one million financial supporters across the world </p></div>
-    <div class="col-md-7" style="margin-bottom: 28px;border-left: 1px solid grey">
+    <div class="col-md-7" style="margin-bottom: 28px;border-left: 0px solid grey">
       <div class="row">
         <div class="col-md-4">
           <div class="card" style="width : 100%;background-color:#4E4C45;top: 5%;border-top: 1px solid red;">
@@ -390,7 +390,7 @@
       </div>
     </div>
     </div>
-    <div class="row" style="margin-bottom: 22px;border-left: 1px solid grey;border-right:1px solid grey;height: 100%">
+    <div class="row" style="margin-bottom: 22px;border-left: 0px solid grey;border-right:0px solid grey;height: 100%">
       <div class="col-md-2 bg-light" style="margin-top: 10px;"><h3><b>Sport</b></h3></div>
       <div class="col-md-4" style="border-left: 0px solid grey">
         <div class="row">
@@ -443,7 +443,7 @@
           </div>
         </div>
       </div>
-     <div class="row" style="border: 1px solid grey">
+     <div class="row" style="border: 0px solid grey">
       <div class="col-md-2" style="margin-top: 5px"><h3><b>Opinion</b></h3></div>
       <div class="col-md-4" style="border-left: 0px solid grey">
         <div class="row">
@@ -502,7 +502,7 @@
         </div>
       </div>
     </div>
-     <div class="row" style="border: 1px solid grey;">
+     <div class="row" style="border: 0px solid grey;">
       <div class="col-md-2 bg-light" style="margin-top: 5px;"><h3><b>Around The World</b></h3></div>
       <div class="col-md-2" style="margin-bottom: 18px;border-left: 0px solid grey">
         <div class="card" style="width : 100%;background-color:#4E4C45;top: 6%;border-top: 1px solid red">
@@ -571,7 +571,7 @@
         </div>
       </div>
       </div>
-      <div class="row" style="border-top: 1px solid grey">
+      <div class="row" style="border-top: 0px solid grey">
     <div class="col-md-2 bg-light" style="margin-top: 5px"><h3><b>Culture</b></h3></div>
     <div class="col-md-10" style="border-left: 0px solid grey">
       <div class="row">
@@ -723,34 +723,43 @@
       </div>
     </div>
   </div> -->
-  <div class="row" style="border-top:1px solid grey;">
+  <div class="row" style="border-top:0px solid grey;">
     <div class="col-md-2" style="margin-top: 5px;margin-left: 10px;"><h3><b>Most Viewed</b></h3>
     </div>
     <div class="col-md-6">
       <div class="row">
         <div class="col-md-6">
           <div class="row">
-            <div class="col-md-12"><div class="card" style="width : 100%;margin-left: 5px;margin-top: 5px;margin-bottom: 5px">
+            <div class="col-md-12">
+              <div class="card" style="width : 100%;margin-left: 5px;margin-top: 5px;margin-bottom: 5px">
     <div class="card-body text-center">
       <p class="card-text">Some text inside the fourth card</p>
     </div>
-  </div></div>
-            <div class="col-md-12"><div class="card" style="width : 100%;margin-left: 5px;margin-bottom: 5px">
+  </div>
+</div>
+            <div class="col-md-12">
+              <div class="card" style="width : 100%;margin-left: 5px;margin-bottom: 5px">
     <div class="card-body text-center">
       <p class="card-text">Some text inside the fourth card</p>
     </div>
-  </div></div>
-            <div class="col-md-12"><div class="card" style="width : 100%;margin-left: 5px;margin-bottom: 5px">
+  </div>
+</div>
+            <div class="col-md-12">
+              <div class="card" style="width : 100%;margin-left: 5px;margin-bottom: 5px">
     <div class="card-body text-center">
       <p class="card-text">Some text inside the fourth card</p>
     </div>
-  </div></div>
-            <div class="col-md-12"><div class="card" style="width : 100%;margin-left: 5px;margin-bottom: 5px">
+  </div>
+</div>
+            <div class="col-md-12">
+              <div class="card" style="width : 100%;margin-left: 5px;margin-bottom: 5px">
     <div class="card-body text-center">
       <p class="card-text">Some text inside the fourth card</p>
     </div>
-  </div></div>
-            <div class="col-md-12"><div class="card" style="width : 100%;margin-left: 5px;margin-bottom: 5px">
+  </div>
+</div>
+            <div class="col-md-12">
+              <div class="card" style="width : 100%;margin-left: 5px;margin-bottom: 5px">
     <div class="card-body text-center">
       <p class="card-text">Some text inside the fourth card</p>
     </div>
@@ -760,27 +769,36 @@
         </div>
         <div class="col-md-6">
           <div class="row">
-            <div class="col-md-12 "><div class="card" style="width : 100%;margin-left: 207px;margin-top: 5px;margin-bottom: 5px">
+            <div class="col-md-12 ">
+              <div class="card" style="width : 100%;margin-left: 207px;margin-top: 5px;margin-bottom: 5px">
     <div class="card-body text-center">
       <p class="card-text">Some text inside the fourth card</p>
     </div>
-  </div></div>
-            <div class="col-md-12 "><div class="card" style="width : 100%;margin-left: 207px;margin-bottom: 5px">
+  </div>
+</div>
+            <div class="col-md-12 ">
+              <div class="card" style="width : 100%;margin-left: 207px;margin-bottom: 5px">
     <div class="card-body text-center">
       <p class="card-text">Some text inside the fourth card</p>
     </div>
-  </div></div>
-            <div class="col-md-12 "><div class="card" style="width : 100%;margin-left: 207px;margin-bottom: 5px">
+  </div>
+</div>
+            <div class="col-md-12 ">
+              <div class="card" style="width : 100%;margin-left: 207px;margin-bottom: 5px">
     <div class="card-body text-center">
       <p class="card-text">Some text inside the fourth card</p>
     </div>
-  </div></div>
-            <div class="col-md-12 "><div class="card" style="width : 100%;margin-left: 207px;margin-bottom: 5px">
+  </div>
+</div>
+            <div class="col-md-12 ">
+              <div class="card" style="width : 100%;margin-left: 207px;margin-bottom: 5px">
     <div class="card-body text-center">
       <p class="card-text">Some text inside the fourth card</p>
     </div>
-  </div></div>
-            <div class="col-md-12 "><div class="card" style="width : 100%;margin-left: 207px;margin-bottom: 5px">
+  </div>
+</div>
+            <div class="col-md-12 ">
+              <div class="card" style="width : 100%;margin-left: 207px;margin-bottom: 5px">
     <div class="card-body text-center">
       <p class="card-text">Some text inside the fourth card</p>
     </div>
@@ -793,7 +811,7 @@
   </div>
  
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-12" style="right: 10.20%">
       <nav class="navbar navbar-expand-sm bg-light">
 
   <!-- Links -->
@@ -827,52 +845,46 @@
     </li>
   </ul>
 </nav>
+
+</div>
+    </div>
+  </div>
+  </div>
+</body>
 <div class="text-center custom-footer" style="background: #0b1f67;color: white;border:1px solid white">
   <div class="row">
     <div class="col-md-4" style="text-align: left;">
-      Signup for our daily email
-      <form>
-        <input type="test" placeholder="Enter Email Here" style="border-radius: 40px;width : 100%">
+      <h5 style="margin-left: 10px">Signup for our daily email</h5>
+      <form style="margin-left: 8px">
+        <input type="test" placeholder="Enter Email Here" style="border-radius: 40px;width : 60%">
         <button type="submit" style="border-radius: 40px;" class="emailbtn">Sign Up</button>
       </form>
     </div>
     <div class="col-md-4">
       <div class="row">
         <div class="col-md-4" style="border-left: 1px solid white;">
-          <ul>
-            <li>Contact us</li>
-            <li>Complaints</li>
+          <ul style="list-style: none;">
+            <li style="text-align: left;">Contact us</li>
+            <li style="text-align: left;">Complaints</li>
             <li style="text-align: left;">Cookie Policy</li>
           </ul>
         </div>
         <div class="col-md-4" style="border-left: 1px solid white">
-         <ul>
-            <li>Contact us</li>
-            <li>Complaints</li>
+         <ul style="list-style: none;">
+            <li style="text-align: left;">Contact us</li>
+            <li style="text-align: left;">Complaints</li>
             <li style="text-align: left;">Cookie Policy</li>
           </ul>
         </div>
       </div>
     </div>
         <div class="col-md-4" style="border-left: 1px solid white;border-right: 1px solid white">
-             <ul>
-            <li>Contact us</li>
-            <li>Complaints</li>
+             <ul style="list-style: none;">
+            <li style="text-align: left">Contact us</li>
+            <li style="text-align: left">Complaints</li>
             <li style="text-align: left;">Cookie Policy</li>
           </ul>
         </div>
-    <div class="col-md-4"><h3 style="columns: yellow; text-align: left;color: yellow"><b>Support The Guardian</b></h3>
-      <button class="w3-button butn7" style="float: left;"><b>Contribute <h5 class="fas fa-arrow-right"></h5></b></button>
-      <h5>          </h5>
-            <button class="w3-button butn7" style="float: left"><b>Subscribe <h5 class="fas fa-arrow-right"></h5></b></button>
-  </div>
 </div>
 </div>
-</div>
-    </div>
-  </div>
-  </div>
-</div>
-</div>
-</body>
 </html>
