--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 </nav>
 </head>
-<body style="border: 2px solid grey;margin: 25px">
+<body style="border: 0px solid grey;margin: 25px">
 <div class="container">
   <div class="row" style="background-color: #DCDCDC;">
   <div class="col-md-2" style="left: 8px;top: 15px">
@@ -811,7 +811,7 @@
   </div>
  
   <div class="row">
-    <div class="col-md-12" style="right: 10.20%">
+    <div class="col-md-12">
       <nav class="navbar navbar-expand-sm bg-light">
 
   <!-- Links -->
