--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 </nav>
 </head>
-<body style="border: 0px solid grey;margin: 25px">
+<body style="border: 1px solid grey;">
 <div class="container">
   <div class="row" style="background-color: #DCDCDC;">
   <div class="col-md-2" style="left: 8px;top: 15px">
