--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
 
 </nav>
 </head>
-<body style="border: 1px solid grey;">
-<div class="container">
+<body >
+<div class="container" style="border: 1px solid grey;">
   <div class="row" style="background-color: #DCDCDC;">
   <div class="col-md-2" style="left: 8px;top: 15px">
       <span><h3><mark><b><a href="#" class="link1">Brexit Deal</a></b></mark></h3></span>
@@ -147,8 +147,8 @@
    </div>
   </div>
   <div class="row" style="border: 0px solid grey;">
-    <div class="col-md-2 bg-light" style="left: 9px; margin-top: 20px">
-      <span><h3><b>Headlines</b></h3></span>
+    <div class="col-md-2 " style="margin-top: 20px">
+      <span><h3 style="margin-left: 8px"><b>Headlines</b></h3></span>
       <span><h5 class="fas fa-search"> Lahore</h5></span>
       <div><span class="fas fa-cloud-sun-rain" style="left: 10%"><p>Now</p></span>
       <span>25*C</span></div>
@@ -256,7 +256,7 @@
     </div>
   </div>
   <div class="row" style="border: 0px solid grey; border-right: 0px;border-top:0px; ">
-    <div class="col-md-2 bg-light" style="margin-top: 5px"><h3><b>Podcast</b></h3></div>
+    <div class="col-md-2" style="margin-top: 5px"><h3 style="margin-left: 8px"><b>Podcast</b></h3></div>
     <div class="col-md-7" style="margin-top: 8px; margin-bottom: 8px;border:0px solid grey;border-top: 0px ;border-right: 0px solid grey;border-bottom: 0px;">
       <div class="card" style="background-color: #4E4C45;max-width : 100%;height: 100%;border-top: 1px solid red">
     <img class="card-img-top" src="img/16.jpg" alt="Card image" style="max-width : 100%">
@@ -271,7 +271,7 @@
     </div>
   </div>
   <div class="row" style="border: 0px solid grey;border-right: 0px;border-top: 0px ">
-    <div class="col-md-2 bg-light"><h3 style="top: 4%;"><b>Spotlight</b></h3></div>
+    <div class="col-md-2"><h3 style="top: 4%;margin-left: 8px"><b>Spotlight</b></h3></div>
     <div class="col-md-4" style="margin-top: 5px; margin-bottom: 8px;border:0px solid grey;border-top: 0px ;border-right: 0px;border-bottom: 0px">
       <div class="row">
         <div class="col-md-12">
@@ -347,8 +347,8 @@
     </div>
   </div> -->
   <div class="row" style="border:0px solid grey;border-top: 0px;border-right: 0px;">
-    <div class="col-md-2 bg-light" style="margin-top: 4px"><h3><b>The One Million Milestone</b></h3>
-      <p>Stories to mark the Guardian reaching one million financial supporters across the world </p></div>
+    <div class="col-md-2" style="margin-top: 4px;"><h3 style="margin-left: 8px"><b>The One Million Milestone</b></h3>
+      <p style="margin-left: 8px">Stories to mark the Guardian reaching one million financial supporters across the world </p></div>
     <div class="col-md-7" style="margin-bottom: 28px;border-left: 0px solid grey">
       <div class="row">
         <div class="col-md-4">
@@ -391,7 +391,7 @@
     </div>
     </div>
     <div class="row" style="margin-bottom: 22px;border-left: 0px solid grey;border-right:0px solid grey;height: 100%">
-      <div class="col-md-2 bg-light" style="margin-top: 10px;"><h3><b>Sport</b></h3></div>
+      <div class="col-md-2 " style="margin-top: 10px;"><h3 style="margin-left: 8px"><b>Sport</b></h3></div>
       <div class="col-md-4" style="border-left: 0px solid grey">
         <div class="row">
           <div class="col-md-12">
@@ -444,7 +444,7 @@
         </div>
       </div>
      <div class="row" style="border: 0px solid grey">
-      <div class="col-md-2" style="margin-top: 5px"><h3><b>Opinion</b></h3></div>
+      <div class="col-md-2" style="margin-top: 5px"><h3 style="margin-left: 8px"><b>Opinion</b></h3></div>
       <div class="col-md-4" style="border-left: 0px solid grey">
         <div class="row">
           <div class="col-md-12" style="margin-top: 15px;margin-bottom: 8px">
@@ -503,7 +503,7 @@
       </div>
     </div>
      <div class="row" style="border: 0px solid grey;">
-      <div class="col-md-2 bg-light" style="margin-top: 5px;"><h3><b>Around The World</b></h3></div>
+      <div class="col-md-2" style="margin-top: 5px;"><h3 style="margin-left: 8px"><b>Around The World</b></h3></div>
       <div class="col-md-2" style="margin-bottom: 18px;border-left: 0px solid grey">
         <div class="card" style="width : 100%;background-color:#4E4C45;top: 6%;border-top: 1px solid red">
     <img class="card-img-top" src="img/8.jpg" alt="Card image" style="max-width : 100%">
@@ -572,7 +572,7 @@
       </div>
       </div>
       <div class="row" style="border-top: 0px solid grey">
-    <div class="col-md-2 bg-light" style="margin-top: 5px"><h3><b>Culture</b></h3></div>
+    <div class="col-md-2" style="margin-top: 5px"><h3 style="margin-left: 8px"><b>Culture</b></h3></div>
     <div class="col-md-10" style="border-left: 0px solid grey">
       <div class="row">
         <div class="col-md-6">
@@ -724,7 +724,7 @@
     </div>
   </div> -->
   <div class="row" style="border-top:0px solid grey;">
-    <div class="col-md-2" style="margin-top: 5px;margin-left: 10px;"><h3><b>Most Viewed</b></h3>
+    <div class="col-md-2" style="margin-top: 5px;margin-left: 8px;"><h3><b>Most Viewed</b></h3>
     </div>
     <div class="col-md-6">
       <div class="row">
