--- a/index.html
+++ b/index.html
@@ -22,21 +22,21 @@
   <div class="row">
     <div class="col-md-12">
       <div class="row">
-        <div class="col-md-5">
+        <div class="col-md-6">
           <nav class="w3-signal-blue" style="color: white;padding: 2%">
-            <h1 style="color: yellow; margin-left: 32px;"><b><strong>Support The Guardian</strong></b></h1>
+            <h1 style="color: yellow; margin-left: 80px;"><b><strong>Support The Guardian</strong></b></h1>
             <button class="w3-button butn7"><b>Contribute <h5 class="fas fa-arrow-right"></h5></b></button>
             <button class="w3-button butn7"><b>Subscribe <h5 class="fas fa-arrow-right"></h5></b></button>
           </nav>
         </div>
-        <div class="col-md-7">
+        <div class="col-md-6">
           <nav style="text-align: right">
             <a href="#" class="w3-mobile" style="border-bottom: 0px;border-right:1px solid white;border-left: 1px solid white;color: white;text-decoration: none;margin-left: 2px;"><b>Search jobs</b></a>
             <a href="#" class="w3-mobile fas fa-user-circle" style="border-bottom: 0px;border-right:1px solid white ;color: white;text-align: right;text-decoration: none;margin-left: 2px;"><b>Sign in</b></a>
             <a href="#" class="w3-mobile fas fa-search" style="border-bottom: 0px;color: white;text-align: right;text-decoration: none;margin-left: 2px;">Search</a>
            
              <div class="w3-dropdown-hover w3-signal-blue">
-    <a href="#" class="w3-button w3-large nav-btn" style="border-bottom: 0px;color: white;text-align: right;text-decoration: none;margin-left: 2px;background-color: #154889 !important;color: white !important;">International Edition</a>
+    <a href="#" class="w3-button  nav-btn" style="border-bottom: 0px;color: white;text-align: right;text-decoration: none;margin-left: 2px;background-color: #154889 !important;color: white !important;">International Edition</a>
     <div class="w3-dropdown-content w3-signal-blue">
       <a href="#" class="w3-button w3-mobile">Uk</a>
       <a href="#" class="w3-button w3-mobile">Asia</a>
@@ -52,13 +52,14 @@
     </div>
   </div>
 </nav>
-  <a href="#" class="butn1 nav-btn w3-large w3-mobile">News</a>
-  <a href="#" class="butn2 nav-btn w3-large w3-mobile">Opinion</a>
-  <a href="#" class="butn3 nav-btn w3-large w3-mobile">Sports</a>
-  <a href="#" class="butn4 nav-btn w3-large w3-mobile">Culture</a>
-  <a href="#" class="butn5 nav-btn w3-large w3-mobile">Lifestyle</a>
+  <nav style="padding-left:93px">
+    <a href="#" class="butn1 nav-btn  w3-mobile">News</a>
+  <a href="#" class="butn2 nav-btn  w3-mobile">Opinion</a>
+  <a href="#" class="butn3 nav-btn  w3-mobile">Sports</a>
+  <a href="#" class="butn4 nav-btn  w3-mobile">Culture</a>
+  <a href="#" class="butn5 nav-btn  w3-mobile">Lifestyle</a>
  <div class="w3-dropdown-hover w3-signal-blue">
-    <a href="#" class="w3-button w3-large nav-btn" style="background-color: #154889 !important;color: white !important;">More</a>
+    <a href="#" class="w3-button  nav-btn" style="background-color: #154889 !important;color: white !important;">More</a>
     <div class="w3-dropdown-content w3-signal-blue">
       <a href="#" class="w3-button w3-mobile">News</a>
       <a href="#" class="w3-button w3-mobile">Opinion</a>
@@ -67,8 +68,9 @@
       <a href="#" class="w3-button w3-mobile">Lifestyle</a>
     </div>
   </div>
+  </nav>
 </nav>
-<nav class="navbar navbar-expand-sm bg-light">
+<nav class="navbar navbar-expand-sm bg-light" style="padding-left: 100px">
 
   <!-- Links -->
   <ul class="navbar-nav">
@@ -148,7 +150,7 @@
   </div>
   <div class="row" style="border: 0px solid grey;">
     <div class="col-md-2 " style="margin-top: 20px">
-      <span><h3 style="margin-left: 8px"><b>Headlines</b></h3></span>
+      <span><h3 style="margin-left: 2px"><b>Headlines</b></h3></span>
       <span><h5 class="fas fa-search"> Lahore</h5></span>
       <div><span class="fas fa-cloud-sun-rain" style="left: 10%"><p>Now</p></span>
       <span>25*C</span></div>
