--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </nav>
         </div>
         <div class="col-md-6">
-          <nav style="text-align: right">
+          <nav style="margin-left: 100px">
             <a href="#" class="w3-mobile" style="border-bottom: 0px;border-right:1px solid white;border-left: 1px solid white;color: white;text-decoration: none;margin-left: 2px;"><b>Search jobs</b></a>
             <a href="#" class="w3-mobile fas fa-user-circle" style="border-bottom: 0px;border-right:1px solid white ;color: white;text-align: right;text-decoration: none;margin-left: 2px;"><b>Sign in</b></a>
             <a href="#" class="w3-mobile fas fa-search" style="border-bottom: 0px;color: white;text-align: right;text-decoration: none;margin-left: 2px;">Search</a>
@@ -45,7 +45,7 @@
   </div>
           </nav>
           <nav class="w3-signal-blue" style="color: white;padding: 1%">
-            <h1 style="text-align: right"><b><a href="#" style="text-decoration: none; color: white !important;">The Guardian</a></b></h1>
+            <h1 style="margin-left: 305px"><b><a href="#" style="text-decoration: none; color: white !important;">The Guardian</a></b></h1>
           </nav>
         </div>
       </div>
