--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 </nav>
 </head>
-<body >
+<body>
 <div class="container" style="border: 1px solid grey;">
   <div class="row" style="background-color: #DCDCDC;">
   <div class="col-md-2" style="left: 8px;top: 15px">
@@ -126,7 +126,7 @@
   </div>
   <br>
     </div>
-   <div class="col-md-3">
+   <div class="col-md-3" style="margin-bottom: 5px">
       <div class="row">
       <div class="col-md-9">
         <div class="card" style="width :100%;background-color: #4E4C45;top: 3.5%">
@@ -135,7 +135,7 @@
       <h3 class="card-title" style="color: #FF4E36">John Doe</h3>
     </div>
   </div>
-  <br>
+
       </div>
       <div class="col-md-9">
         <div class="card" style="width : 100%;background-color: #4E4C45;top: 10.5%">
@@ -148,7 +148,7 @@
     </div>
    </div>
   </div>
-  <div class="row" style="border: 0px solid grey;">
+  <div class="row" style="border-top: 0px solid grey;">
     <div class="col-md-2 " style="margin-top: 20px">
       <span><h3 style="margin-left: 2px"><b>Headlines</b></h3></span>
       <span><h5 class="fas fa-search"> Lahore</h5></span>
@@ -257,22 +257,22 @@
       </div> -->
     </div>
   </div>
-  <div class="row" style="border: 0px solid grey; border-right: 0px;border-top:0px; ">
+  <div class="row" style="border: 0px solid grey; border-right: 0px;border-top:1px solid grey; ">
     <div class="col-md-2" style="margin-top: 5px"><h3 style="margin-left: 8px"><b>Podcast</b></h3></div>
     <div class="col-md-7" style="margin-top: 8px; margin-bottom: 8px;border:0px solid grey;border-top: 0px ;border-right: 0px solid grey;border-bottom: 0px;">
-      <div class="card" style="background-color: #4E4C45;max-width : 100%;height: 100%;border-top: 1px solid red">
+      <div class="card" style="background-color: #4E4C45;max-width : 100%;height: 80%;border-top: 1px solid red">
     <img class="card-img-top" src="img/16.jpg" alt="Card image" style="max-width : 100%">
   </div>
     </div>
     <div class="col-md-3">
       <div class="row">
         <div class="col-md-10" style="margin-top: 8px;">
-          <img class="card-img-top" src="img/8.jpg" alt="Card image" style="max-width : 100%;height: 100S%;border-top: 1px solid red">
+          <img class="card-img-top" src="img/8.jpg" alt="Card image" style="width : 100%;height: 100%;border-top: 1px solid red;">
         </div>
       </div>
     </div>
   </div>
-  <div class="row" style="border: 0px solid grey;border-right: 0px;border-top: 0px ">
+  <div class="row" style="border: 0px solid grey;border-right: 0px;border-top: 1px solid grey ">
     <div class="col-md-2"><h3 style="top: 4%;margin-left: 8px"><b>Spotlight</b></h3></div>
     <div class="col-md-4" style="margin-top: 5px; margin-bottom: 8px;border:0px solid grey;border-top: 0px ;border-right: 0px;border-bottom: 0px">
       <div class="row">
@@ -348,7 +348,7 @@
       </div>
     </div>
   </div> -->
-  <div class="row" style="border:0px solid grey;border-top: 0px;border-right: 0px;">
+  <div class="row" style="border:0px solid grey;border-top: 1px;border-right: 0px;">
     <div class="col-md-2" style="margin-top: 4px;"><h3 style="margin-left: 8px"><b>The One Million Milestone</b></h3>
       <p style="margin-left: 8px">Stories to mark the Guardian reaching one million financial supporters across the world </p></div>
     <div class="col-md-7" style="margin-bottom: 28px;border-left: 0px solid grey">
@@ -392,7 +392,7 @@
       </div>
     </div>
     </div>
-    <div class="row" style="margin-bottom: 22px;border-left: 0px solid grey;border-right:0px solid grey;height: 100%">
+    <div class="row" style="margin-bottom: 22px;border-left: 0px solid grey;border-top:1px solid grey;height: 100%">
       <div class="col-md-2 " style="margin-top: 10px;"><h3 style="margin-left: 8px"><b>Sport</b></h3></div>
       <div class="col-md-4" style="border-left: 0px solid grey">
         <div class="row">
@@ -445,7 +445,7 @@
           </div>
         </div>
       </div>
-     <div class="row" style="border: 0px solid grey">
+     <div class="row" style="border-top: 1px solid grey">
       <div class="col-md-2" style="margin-top: 5px"><h3 style="margin-left: 8px"><b>Opinion</b></h3></div>
       <div class="col-md-4" style="border-left: 0px solid grey">
         <div class="row">
@@ -504,7 +504,7 @@
         </div>
       </div>
     </div>
-     <div class="row" style="border: 0px solid grey;">
+     <div class="row" style="border-top: 1px solid grey;">
       <div class="col-md-2" style="margin-top: 5px;"><h3 style="margin-left: 8px"><b>Around The World</b></h3></div>
       <div class="col-md-2" style="margin-bottom: 18px;border-left: 0px solid grey">
         <div class="card" style="width : 100%;background-color:#4E4C45;top: 6%;border-top: 1px solid red">
@@ -573,7 +573,7 @@
         </div>
       </div>
       </div>
-      <div class="row" style="border-top: 0px solid grey">
+      <div class="row" style="border-top: 1px solid grey">
     <div class="col-md-2" style="margin-top: 5px"><h3 style="margin-left: 8px"><b>Culture</b></h3></div>
     <div class="col-md-10" style="border-left: 0px solid grey">
       <div class="row">
@@ -855,7 +855,7 @@
 </body>
 <div class="text-center custom-footer" style="background: #0b1f67;color: white;border:1px solid white">
   <div class="row">
-    <div class="col-md-4" style="text-align: left;">
+    <div class="col-md-4" style="text-align: left;padding-left: 112px">
       <h5 style="margin-left: 10px">Signup for our daily email</h5>
       <form style="margin-left: 8px">
         <input type="test" placeholder="Enter Email Here" style="border-radius: 40px;width : 60%">
@@ -865,26 +865,26 @@
     <div class="col-md-4">
       <div class="row">
         <div class="col-md-4" style="border-left: 1px solid white;">
-          <ul style="list-style: none;">
-            <li style="text-align: left;">Contact us</li>
-            <li style="text-align: left;">Complaints</li>
-            <li style="text-align: left;">Cookie Policy</li>
+          <ul style="list-style: none;float: left;">
+            <li style="text-align: left;"><a href="#" class="footer-links">Contact us</a></li>
+            <li style="text-align: left;"><a href="#" class="footer-links">Complaints</a></li>
+            <li style="text-align: left;"><a href="#" class="footer-links">Cookie Policy</a></li>
           </ul>
         </div>
         <div class="col-md-4" style="border-left: 1px solid white">
-         <ul style="list-style: none;">
-            <li style="text-align: left;">Contact us</li>
-            <li style="text-align: left;">Complaints</li>
-            <li style="text-align: left;">Cookie Policy</li>
+         <ul style="list-style: none; float: center">
+            <li style="text-align: left;"><a href="#" class="footer-links">Contact us</a></li>
+            <li style="text-align: left;"><a href="#" class="footer-links">Complaints</a></li>
+            <li style="text-align: left;"><a href="#" class="footer-links">Cookie Policy</a></li>
           </ul>
         </div>
       </div>
     </div>
         <div class="col-md-4" style="border-left: 1px solid white;border-right: 1px solid white">
-             <ul style="list-style: none;">
-            <li style="text-align: left">Contact us</li>
-            <li style="text-align: left">Complaints</li>
-            <li style="text-align: left;">Cookie Policy</li>
+             <ul style="list-style: none; float: left;">
+            <li style="text-align: left;"><a href="#" class="footer-links">Contact us</a></li>
+            <li style="text-align: left;"><a href="#" class="footer-links">Complaints</a></li>
+            <li style="text-align: left;"><a href="#" class="footer-links">Cookie Policy</a></li>
           </ul>
         </div>
 </div>
