--- a/index.html
+++ b/index.html
@@ -165,9 +165,7 @@
         <div class="col-md-12" style="margin-top: 10px">
           <img src="img/9.jpg" style="width :100%;object-fit: scale-down;">
         </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
+          <div class="col-md-12">
           <div class="row">
             <div class="col-md-4">
               <div class="card" style="width : 100%;background-color: #4E4C45;top: 6%;height: 100%;border-top: 1px solid red">
@@ -210,7 +208,6 @@
           </div>
 
 </div>
-       
       </div>
     </div>
     <div class="col-md-3" style="">
@@ -257,7 +254,7 @@
       </div> -->
     </div>
   </div>
-  <div class="row" style="border: 0px solid grey; border-right: 0px;border-top:1px solid grey; ">
+  <div class="row" style="margin-left: 0.25px;width: 100%;border: 0px solid grey; border-right: 0px;border-top:1px solid grey; ">
     <div class="col-md-2" style="margin-top: 5px"><h3 style="margin-left: 8px"><b>Podcast</b></h3></div>
     <div class="col-md-7" style="margin-top: 8px; margin-bottom: 8px;border:0px solid grey;border-top: 0px ;border-right: 0px solid grey;border-bottom: 0px;">
       <div class="card" style="background-color: #4E4C45;max-width : 100%;height: 80%;border-top: 1px solid red">
@@ -266,13 +263,13 @@
     </div>
     <div class="col-md-3">
       <div class="row">
-        <div class="col-md-10" style="margin-top: 8px;">
+        <div class="col-md-9" style="margin-top: 8px;">
           <img class="card-img-top" src="img/8.jpg" alt="Card image" style="width : 100%;height: 100%;border-top: 1px solid red;">
         </div>
       </div>
     </div>
   </div>
-  <div class="row" style="border: 0px solid grey;border-right: 0px;border-top: 1px solid grey ">
+  <div class="row" style="margin-left: 0.25px;width: 100%;border: 0px solid grey;border-right: 0px;border-top: 1px solid grey ">
     <div class="col-md-2"><h3 style="top: 4%;margin-left: 8px"><b>Spotlight</b></h3></div>
     <div class="col-md-4" style="margin-top: 5px; margin-bottom: 8px;border:0px solid grey;border-top: 0px ;border-right: 0px;border-bottom: 0px">
       <div class="row">
@@ -348,7 +345,7 @@
       </div>
     </div>
   </div> -->
-  <div class="row" style="border:0px solid grey;border-top: 1px;border-right: 0px;">
+  <div class="row" style="margin-left: 0.25px;width: 100%;border:0px solid grey;border-top: 1px solid grey;border-right: 0px;">
     <div class="col-md-2" style="margin-top: 4px;"><h3 style="margin-left: 8px"><b>The One Million Milestone</b></h3>
       <p style="margin-left: 8px">Stories to mark the Guardian reaching one million financial supporters across the world </p></div>
     <div class="col-md-7" style="margin-bottom: 28px;border-left: 0px solid grey">
@@ -392,7 +389,7 @@
       </div>
     </div>
     </div>
-    <div class="row" style="margin-bottom: 22px;border-left: 0px solid grey;border-top:1px solid grey;height: 100%">
+    <div class="row" style="margin-left: 0.25px;width: 100%;margin-bottom: 22px;border-left: 0px solid grey;border-top:1px solid grey;height: 100%">
       <div class="col-md-2 " style="margin-top: 10px;"><h3 style="margin-left: 8px"><b>Sport</b></h3></div>
       <div class="col-md-4" style="border-left: 0px solid grey">
         <div class="row">
@@ -445,7 +442,7 @@
           </div>
         </div>
       </div>
-     <div class="row" style="border-top: 1px solid grey">
+     <div class="row" style="margin-left: 0.25px;width: 100%;border-top: 1px solid grey">
       <div class="col-md-2" style="margin-top: 5px"><h3 style="margin-left: 8px"><b>Opinion</b></h3></div>
       <div class="col-md-4" style="border-left: 0px solid grey">
         <div class="row">
@@ -504,7 +501,7 @@
         </div>
       </div>
     </div>
-     <div class="row" style="border-top: 1px solid grey;">
+     <div class="row" style="margin-left: 0.25px;width: 100%;border-top: 1px solid grey;">
       <div class="col-md-2" style="margin-top: 5px;"><h3 style="margin-left: 8px"><b>Around The World</b></h3></div>
       <div class="col-md-2" style="margin-bottom: 18px;border-left: 0px solid grey">
         <div class="card" style="width : 100%;background-color:#4E4C45;top: 6%;border-top: 1px solid red">
@@ -573,7 +570,7 @@
         </div>
       </div>
       </div>
-      <div class="row" style="border-top: 1px solid grey">
+      <div class="row" style="margin-left: 0.25px;width: 100%;border-top: 1px solid grey">
     <div class="col-md-2" style="margin-top: 5px"><h3 style="margin-left: 8px"><b>Culture</b></h3></div>
     <div class="col-md-10" style="border-left: 0px solid grey">
       <div class="row">
@@ -725,7 +722,7 @@
       </div>
     </div>
   </div> -->
-  <div class="row" style="border-top:0px solid grey;">
+  <div class="row" style="margin-left: 0.25px;width: 100%;border-top:1px solid grey;margin-top: 5px">
     <div class="col-md-2" style="margin-top: 5px;margin-left: 8px;"><h3><b>Most Viewed</b></h3>
     </div>
     <div class="col-md-6">
@@ -733,35 +730,35 @@
         <div class="col-md-6">
           <div class="row">
             <div class="col-md-12">
-              <div class="card" style="width : 100%;margin-left: 5px;margin-top: 5px;margin-bottom: 5px">
+              <div class="card" style="width : 100%;margin-left: -8px;margin-top: 5px;margin-bottom: 5px">
     <div class="card-body text-center">
       <p class="card-text">Some text inside the fourth card</p>
     </div>
   </div>
 </div>
             <div class="col-md-12">
-              <div class="card" style="width : 100%;margin-left: 5px;margin-bottom: 5px">
+              <div class="card" style="width : 100%;margin-left: -8px;margin-bottom: 5px">
     <div class="card-body text-center">
       <p class="card-text">Some text inside the fourth card</p>
     </div>
   </div>
 </div>
             <div class="col-md-12">
-              <div class="card" style="width : 100%;margin-left: 5px;margin-bottom: 5px">
+              <div class="card" style="width : 100%;margin-left: -8px;margin-bottom: 5px">
     <div class="card-body text-center">
       <p class="card-text">Some text inside the fourth card</p>
     </div>
   </div>
 </div>
             <div class="col-md-12">
-              <div class="card" style="width : 100%;margin-left: 5px;margin-bottom: 5px">
+              <div class="card" style="width : 100%;margin-left: -8px;margin-bottom: 5px">
     <div class="card-body text-center">
       <p class="card-text">Some text inside the fourth card</p>
     </div>
   </div>
 </div>
             <div class="col-md-12">
-              <div class="card" style="width : 100%;margin-left: 5px;margin-bottom: 5px">
+              <div class="card" style="width : 100%;margin-left: -8px;margin-bottom: 5px">
     <div class="card-body text-center">
       <p class="card-text">Some text inside the fourth card</p>
     </div>
@@ -772,35 +769,35 @@
         <div class="col-md-6">
           <div class="row">
             <div class="col-md-12 ">
-              <div class="card" style="width : 100%;margin-left: 207px;margin-top: 5px;margin-bottom: 5px">
+              <div class="card" style="width : 100%;margin-left: 172px;margin-top: 5px;margin-bottom: 5px">
     <div class="card-body text-center">
       <p class="card-text">Some text inside the fourth card</p>
     </div>
   </div>
 </div>
             <div class="col-md-12 ">
-              <div class="card" style="width : 100%;margin-left: 207px;margin-bottom: 5px">
+              <div class="card" style="width : 100%;margin-left: 172px;margin-bottom: 5px">
     <div class="card-body text-center">
       <p class="card-text">Some text inside the fourth card</p>
     </div>
   </div>
 </div>
             <div class="col-md-12 ">
-              <div class="card" style="width : 100%;margin-left: 207px;margin-bottom: 5px">
+              <div class="card" style="width : 100%;margin-left: 172px;margin-bottom: 5px">
     <div class="card-body text-center">
       <p class="card-text">Some text inside the fourth card</p>
     </div>
   </div>
 </div>
             <div class="col-md-12 ">
-              <div class="card" style="width : 100%;margin-left: 207px;margin-bottom: 5px">
+              <div class="card" style="width : 100%;margin-left: 172px;margin-bottom: 5px">
     <div class="card-body text-center">
       <p class="card-text">Some text inside the fourth card</p>
     </div>
   </div>
 </div>
             <div class="col-md-12 ">
-              <div class="card" style="width : 100%;margin-left: 207px;margin-bottom: 5px">
+              <div class="card" style="width : 100%;margin-left: 172px;margin-bottom: 5px">
     <div class="card-body text-center">
       <p class="card-text">Some text inside the fourth card</p>
     </div>
@@ -862,7 +859,7 @@
         <button type="submit" style="border-radius: 40px;" class="emailbtn">Sign Up</button>
       </form>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-8">
       <div class="row">
         <div class="col-md-4" style="border-left: 1px solid white;">
           <ul style="list-style: none;float: left;">
@@ -878,15 +875,16 @@
             <li style="text-align: left;"><a href="#" class="footer-links">Cookie Policy</a></li>
           </ul>
         </div>
-      </div>
-    </div>
-        <div class="col-md-4" style="border-left: 1px solid white;border-right: 1px solid white">
+        <div class="col-md-4" style="border-left: 1px solid white;border-right: 0px solid white">
              <ul style="list-style: none; float: left;">
             <li style="text-align: left;"><a href="#" class="footer-links">Contact us</a></li>
             <li style="text-align: left;"><a href="#" class="footer-links">Complaints</a></li>
             <li style="text-align: left;"><a href="#" class="footer-links">Cookie Policy</a></li>
           </ul>
         </div>
+      </div>
+        
+      </div>
 </div>
 </div>
 </html>
