--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
     <div class="col-md-3">
       <div class="row">
         <div class="col-md-9" style="margin-top: 8px;">
-          <img class="card-img-top" src="img/8.jpg" alt="Card image" style="width : 100%;height: 100%;border-top: 1px solid red;">
+          <img class="card-img-top" src="img/8.jpg" alt="Card image" style="width : 100%;height: 222%;border-top: 1px solid red;">
         </div>
       </div>
     </div>
@@ -491,11 +491,11 @@
       <div class="col-md-3">
         <div class="row">
           <div class="col-md-9">
-            <div class="card" style="background-color: #4E4C45;margin-top: 13px;right: 3.5%;width : 100%;height: 113%;border-top: 1px solid orange">
-              <div class="card-body">
-      <h4 class="card-title" style="color: #FF4E36">John Doe</h4>
+            <div class="card" style="background-color: #4E4C45;margin-top: 13px;right: 3.5%;width : 100%;height: 122%;border-top: 1px solid orange">
+              <div class="card-body" style="height: 100%">
+      <h4 class="card-title" style="color: #FF4E36;">John Doe</h4>
     </div>
-    <img class="card-img-bottom" src="img/13.jpg" alt="Card image" style="max-width : 100%">
+    <img class="card-img-bottom" src="img/13.jpg" alt="Card image" style="max-width : 100%;">
   </div>
 </div>
         </div>
@@ -572,7 +572,7 @@
       </div>
       <div class="row" style="margin-left: 0.25px;width: 100%;border-top: 1px solid grey">
     <div class="col-md-2" style="margin-top: 5px"><h3 style="margin-left: 8px"><b>Culture</b></h3></div>
-    <div class="col-md-10" style="border-left: 0px solid grey">
+    <div class="col-md-9" style="border-left: 0px solid grey">
       <div class="row">
         <div class="col-md-6">
           <div class="row">
@@ -587,7 +587,7 @@
           </div>
           </div>
           <div class="col-md-6">
-            <div class="card" style="width : 100%;margin-top: 12px;margin-bottom: 5px;right: 2.98%;border-top: 1px solid brown">
+            <div class="card" style="width : 100%;margin-top: 12px;margin-bottom: 5px;margin-left: 17px;border-top: 1px solid brown">
     <img class="card-img-top" src="img/8.jpg" alt="Card image" style="max-width : 100%">
     <div class="card-body">
       <h3 class="card-title" style="color: #FF4E36">John Doe</h3>
@@ -769,35 +769,35 @@
         <div class="col-md-6">
           <div class="row">
             <div class="col-md-12 ">
-              <div class="card" style="width : 100%;margin-left: 172px;margin-top: 5px;margin-bottom: 5px">
+              <div class="card" style="width : 100%;margin-left: 154px;margin-top: 5px;margin-bottom: 5px">
     <div class="card-body text-center">
       <p class="card-text">Some text inside the fourth card</p>
     </div>
   </div>
 </div>
             <div class="col-md-12 ">
-              <div class="card" style="width : 100%;margin-left: 172px;margin-bottom: 5px">
+              <div class="card" style="width : 100%;margin-left: 154px;margin-bottom: 5px">
     <div class="card-body text-center">
       <p class="card-text">Some text inside the fourth card</p>
     </div>
   </div>
 </div>
             <div class="col-md-12 ">
-              <div class="card" style="width : 100%;margin-left: 172px;margin-bottom: 5px">
+              <div class="card" style="width : 100%;margin-left: 154px;margin-bottom: 5px">
     <div class="card-body text-center">
       <p class="card-text">Some text inside the fourth card</p>
     </div>
   </div>
 </div>
             <div class="col-md-12 ">
-              <div class="card" style="width : 100%;margin-left: 172px;margin-bottom: 5px">
+              <div class="card" style="width : 100%;margin-left: 154px;margin-bottom: 5px">
     <div class="card-body text-center">
       <p class="card-text">Some text inside the fourth card</p>
     </div>
   </div>
 </div>
             <div class="col-md-12 ">
-              <div class="card" style="width : 100%;margin-left: 172px;margin-bottom: 5px">
+              <div class="card" style="width : 100%;margin-left: 154px;margin-bottom: 5px">
     <div class="card-body text-center">
       <p class="card-text">Some text inside the fourth card</p>
     </div>
