--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
       <div class="col-md-3">
         <div class="row">
           <div class="col-md-12">
-            <div class="card" style="background-color: #4E4C45;top: 5%;right: 1%;width : 100%;border-top: 1px solid orange">
+            <div class="card" style="background-color: #4E4C45;top: 5%;right: 1%;width : 100%;height: 109%;border-top: 1px solid orange">
     <img class="card-img-top" src="img/13.jpg" alt="Card image" style="max-width : 100%">
     <div class="card-body">
       <h4 class="card-title" style="color: #FF4E36">John Doe</h4>
@@ -504,16 +504,16 @@
      <div class="row" style="margin-left: 0.25px;width: 100%;border-top: 1px solid grey;">
       <div class="col-md-2" style="margin-top: 5px;"><h3 style="margin-left: 8px"><b>Around The World</b></h3></div>
       <div class="col-md-2" style="margin-bottom: 18px;border-left: 0px solid grey">
-        <div class="card" style="width : 100%;background-color:#4E4C45;top: 6%;border-top: 1px solid red">
-    <img class="card-img-top" src="img/8.jpg" alt="Card image" style="max-width : 100%">
+        <div class="card" style="width : 100%;background-color:#4E4C45;top: 6%;border-top: 1px solid red;height: 97%">
+    <img class="card-img-top" src="img/8.jpg" alt="Card image" style="max-width : 100%;height: 60%">
     <div class="card-body">
       <h3 class="card-title" style="color: #FF4E36">John Doe</h3>
     </div>
   </div>
 </div>
       <div class="col-md-2" style="margin-bottom: 18px">
-        <div class="card" style="width : 100%;background-color:#4E4C45;top: 6%;">
-    <img class="card-img-top" src="img/8.jpg" alt="Card image" style="max-width : 100%;border-top: 1px solid red">
+        <div class="card" style="width : 100%;background-color:#4E4C45;top: 6%;height: 97%">
+    <img class="card-img-top" src="img/8.jpg" alt="Card image" style="max-width : 100%;border-top: 1px solid red;height: 60%">
     <div class="card-body">
       <h3 class="card-title" style="color: #FF4E36">John Doe</h3>
     </div>
